--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <meta property="og:image" content="/og-image.jpeg" />
-    <meta property="og:title" content="Vite React TS Tailwind Starter">
-    <meta property="og:site_name" content="Vite React TS Tailwind Starter">
-    <meta property="og:url" content="https://vite-react-ts-tailwind-starter.pages.dev/">
-    <meta property="og:description" content="Building Apps with the best DX we love">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/GabrielCarCleaningSmall.png" type="image/x-icon" />
+    <meta property="og:image" content="/GabrielCarCleaning.jpeg" />
+    <meta property="og:title" content="Gabriel Car Cleaning" />
+    <meta property="og:site_name" content="Gabriel Car Cleaning" />
+    <meta property="og:url" content="https://UPDATE THIS LATER STEVEN" />
+    <meta property="og:description" content="Best car detailing around!" />
 
     <!-- Twitter open-graph tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image:alt" content="Vite React TS Tailwind Starter">
-    <meta name="twitter:title" content="Vite React TS Tailwind Starter">
-    <meta name="twitter:description"
-      content="Building Apps with the best DX we love">
-    <meta name="twitter:image:src" content="/og-image.jpeg">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image:alt" content="Gabriel Car Cleaning" />
+    <meta name="twitter:title" content="Gabriel Car Cleaning" />
+    <meta name="twitter:description" content="Best car detailing around!" />
+    <meta name="twitter:image:src" content="/GabrielCarCleaning.jpeg" />
 
-    <meta name="description" content="Vite React TS Tailwind Starter">
-    <meta name="keywords" content="vite,react,typescript,tailwindcss,template,starter,boilerplate">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <meta name="description" content="Gabriel Car Cleaning" />
+    <meta
+      name="keywords"
+      content="vite,react,typescript,tailwindcss,template,starter,boilerplate"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
     <meta name="theme-color" content="#bef264" />
     <title></title>
   </head>
