--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <meta name="theme-color" content="#bef264" />
+    <meta name="theme-color" content="#ffffff" />
     <title></title>
   </head>
   <body>
